removed form selection from UI

--- a/mcarbonPortal/src/app/update-account-dialog/update-account-dialog.component.html
+++ b/mcarbonPortal/src/app/update-account-dialog/update-account-dialog.component.html
@@ -487,7 +487,7 @@
                       </mat-radio-group>
                     </ng-container>
 
-                    <ng-container *ngSwitchCase="'dropdown'">
+                    <!-- <ng-container *ngSwitchCase="'dropdown'">
                       <mat-form-field appearance="outline">
                         <mat-label>Form</mat-label>
                         <mat-select
@@ -504,7 +504,7 @@
                           </mat-option>
                         </mat-select>
                       </mat-form-field>
-                    </ng-container>
+                    </ng-container> -->
                   </ng-container>
                 </div>
               </div>
@@ -622,7 +622,7 @@
                       </mat-radio-group>
                     </ng-container>
 
-                    <ng-container *ngSwitchCase="'dropdown'">
+                    <!-- <ng-container *ngSwitchCase="'dropdown'">
                       <mat-form-field appearance="outline">
                         <mat-label>Form</mat-label>
                         <mat-select
@@ -639,7 +639,7 @@
                           </mat-option>
                         </mat-select>
                       </mat-form-field>
-                    </ng-container>
+                    </ng-container> -->
                   </ng-container>
                 </div>
               </div>
