--- a/mcarbonPortal/src/app/update-user-dialog/update-user-dialog.component.html
+++ b/mcarbonPortal/src/app/update-user-dialog/update-user-dialog.component.html
@@ -593,7 +593,7 @@
                         </mat-radio-button>
                       </mat-radio-group>
                     </ng-container>
-                    <ng-container *ngSwitchCase="'dropdown'">
+                    <!-- <ng-container *ngSwitchCase="'dropdown'">
                       <mat-form-field appearance="outline">
                         <mat-label>Form</mat-label>
                         <mat-select
@@ -610,7 +610,7 @@
                           </mat-option>
                         </mat-select>
                       </mat-form-field>
-                    </ng-container>
+                    </ng-container> -->
                   </ng-container>
                 </div>
               </div>
@@ -729,7 +729,7 @@
                       </mat-radio-group>
                     </ng-container>
 
-                    <ng-container *ngSwitchCase="'dropdown'">
+                    <!-- <ng-container *ngSwitchCase="'dropdown'">
                       <mat-form-field appearance="outline">
                         <mat-label>Form</mat-label>
                         <mat-select
@@ -746,7 +746,7 @@
                           </mat-option>
                         </mat-select>
                       </mat-form-field>
-                    </ng-container>
+                    </ng-container> -->
                   </ng-container>
                 </div>
               </div>
