--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/panel/question-panel/question-panel.component.html
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/panel/question-panel/question-panel.component.html
@@ -1,79 +1,109 @@
-<div class="panel-container" id="form-container" fxLayout="column" fxLayoutAlign="space-evenly none">
-	<div class="panel-header-container" fxLayoutAlign="start center">
-		<h3 class="panel-title">{{ titleicdc }}</h3>
-		<button
-			*ngIf="isClose"
-			class="panel-close-button"
-			mat-icon-button
-			matTooltip="{{ 'PANEL.CLOSE' | translate }}"
-			(click)="closeForm()"
-		>
-			<mat-icon>close</mat-icon>
-		</button>
-	</div>
+<div class="panel-container" id="form-container" fxLayout="column" fxLayoutAlign="none">
+	<ng-container *ngIf="Selectformpanel; else Questionpanel">
+		<!-- Panel A  content -->
+		<div fxLayout="column">
+			<div class="panel-header-container" fxLayoutAlign="start center">
+				<h3 class="panel-title">Select Form</h3>
+				<button class="panel-close-button" mat-icon-button matTooltip="{{ 'PANEL.CLOSE' | translate }}" (click)="closeForm()">
+					<mat-icon>close</mat-icon>
+				</button>
+			</div>
+			<div class="question-container" fxFlex="75%" fxLayoutAlign="space-evenly none" style="display: flex; flex-direction: column">
+				<ul class="scrollable-list" style="flex: 1; overflow-y: auto">
+					<li
+						*ngFor="let item of FormArray; let i = index"
+						(click)="selectItem(i)"
+						[class.selected]="i === selectedIdx"
+						[style.backgroundColor]="i === selectedIdx ? '#f0f0f0' : 'transparent'"
+					>
+						{{ item }}
+					</li>
+				</ul>
 
-	<div class="question-container" fxFlex="75%" fxLayoutAlign="space-evenly none" (scroll)="onScroll()" #formScroll>
-		<div class="question-detail">
-			<form [formGroup]="form" (ngSubmit)="submitForm()" *ngIf="form">
-				<div class="icdc" *ngFor="let question of questions; let i = index">
-					<div class="question-block">
-						<label class="question">Q {{ i + 1 }} . {{ question.question }}</label>
-					</div>
-					<br />
-					<ng-container [ngSwitch]="question.type">
-						<div *ngSwitchCase="'radio'">
-							<label *ngFor="let option of question.meta">
-								<input
-									type="radio"
-									[name]="question.q_id"
-									[formControlName]="question.q_id"
-									[value]="option"
-									class="custom-radio"
-								/>
-								{{ option }}
-							</label>
-						</div>
-						<div *ngSwitchCase="'checkbox'">
-							<div>
-								<ng-container *ngFor="let option of question.meta">
-									<mat-checkbox
-										[disabled]="!editicdc"
-										[value]="option"
-										[checked]="isOptionSelected(question.q_id, option)"
-										(change)="updateSelectedAnswers(question.q_id, option, $event.checked)"
-									>
-										{{ option }} </mat-checkbox
-									><br />
-								</ng-container>
-							</div>
-						</div>
-						<div style="padding-left: 20px" *ngSwitchCase="'dropdown'">
-							<select [formControlName]="question.q_id">
-								<option value="">Select an option</option>
-								<option *ngFor="let option of question.meta" [value]="option">{{ option }}</option>
-							</select>
-						</div>
-						<div style="padding-left: 20px" *ngSwitchCase="'text'">
-							
-							<input
-								#inputFieldRef
-								type="text"
-								[formControlName]="question.q_id"
-								(input)="updateValueOfTextQuestion(question.q_id)"
-							/>
-                           
-						</div>
-						<div style="padding-left: 20px" *ngSwitchDefault>
-							<input type="text" [formControlName]="question.q_id" />
-						</div>
-					</ng-container>
-					<br />
+				<div style="display: flex; margin-left: 10%; margin-right: 10%; justify-content: space-between; margin-top: 20px">
+					<button [disabled]="!isformselected" (click)="previewToquestion()">Preview Questions</button>
+					<button [disabled]="!isformselected" (click)="ShowquestionTouser()">Show To User</button>
 				</div>
-
-				<div class="submit-button">
-					<button *ngIf="isSubmit" type="submit">Submit</button>
-				</div>
-			</form>
+			</div>
 		</div>
-	</div>
+	</ng-container>
+
+	<ng-template #Questionpanel>
+		<div class="panel-header-container" fxLayoutAlign="start center">
+			<h3 class="panel-title">{{ titleicdc }}</h3>
+			<button
+				*ngIf="isClose && !isformpreviewmode"
+				class="panel-close-button"
+				mat-icon-button
+				matTooltip="{{ 'PANEL.CLOSE' | translate }}"
+				(click)="closeForm()"
+			>
+				<mat-icon>close</mat-icon>
+			</button>
+		</div>
+		<div class="question-container" fxFlex="75%" fxLayoutAlign="space-evenly none" (scroll)="onScroll()" #formScroll>
+			<div class="question-detail">
+				<form [formGroup]="form" (ngSubmit)="submitForm()" *ngIf="form">
+					<div class="icdc" *ngFor="let question of questions; let i = index">
+						<div class="question-block">
+							<label class="question">Q {{ i + 1 }} . {{ question.question }}</label>
+						</div>
+						<br />
+						<ng-container [ngSwitch]="question.type">
+							<div *ngSwitchCase="'radio'">
+								<label *ngFor="let option of question.meta">
+									<input
+										type="radio"
+										[name]="question.q_id"
+										[formControlName]="question.q_id"
+										[value]="option"
+										class="custom-radio"
+									/>
+									{{ option }}
+								</label>
+							</div>
+							<div *ngSwitchCase="'checkbox'">
+								<div>
+									<ng-container *ngFor="let option of question.meta">
+										<mat-checkbox
+											[disabled]="!editicdc"
+											[value]="option"
+											[checked]="isOptionSelected(question.q_id, option)"
+											(change)="updateSelectedAnswers(question.q_id, option, $event.checked)"
+										>
+											{{ option }} </mat-checkbox
+										><br />
+									</ng-container>
+								</div>
+							</div>
+							<div style="padding-left: 20px" *ngSwitchCase="'dropdown'">
+								<select [formControlName]="question.q_id">
+									<option value="">Select an option</option>
+									<option *ngFor="let option of question.meta" [value]="option">{{ option }}</option>
+								</select>
+							</div>
+							<div style="padding-left: 20px" *ngSwitchCase="'text'">
+								<input
+									#inputFieldRef
+									type="text"
+									[formControlName]="question.q_id"
+									(input)="updateTextquestion(question.q_id)"
+								/>
+							</div>
+							<div style="padding-left: 20px" *ngSwitchDefault>
+								<input type="text" [formControlName]="question.q_id" />
+							</div>
+						</ng-container>
+						<br />
+					</div>
+					<div class="submit-button">
+						<button type="submit" (click)="Close_Submit_button()">
+							<span *ngIf="isformpreviewmode">Close</span>
+							<span *ngIf="!isformpreviewmode">Submit</span>
+						</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</ng-template>
 </div>
