added icdc management

--- a/mcarbonPortal/src/app/components/sidebar/sidebar.component.html
+++ b/mcarbonPortal/src/app/components/sidebar/sidebar.component.html
@@ -58,7 +58,7 @@
   </div>
   <ul class="nav">
     <div class="logo-image">
-      <img *ngIf="isLogo" class="img-photo" src="{{ logo.byte }}" />
+      <img *ngIf="isLogo" class="img-photo" src="{{ srcImg }}" />
       <img *ngIf="!isLogo" class="img-photo" src="{{ srcImg }}" />
     </div>
   </ul>
