--- a/mcarbonPortal/src/app/templates/question-template/question-template.component.html
+++ b/mcarbonPortal/src/app/templates/question-template/question-template.component.html
@@ -1,4 +1,4 @@
-<div class="container q-container" >
+<div class="container q-container">
   <div class="row" [formGroup]="questionForm">
     <div class="col-md-1 ques-no ques-id">Q {{ this.questionId + 1 }}</div>
     <div class="col-md-8">
@@ -33,5 +33,8 @@
         </mat-select>
       </mat-form-field>
     </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">ANSWERS</div>
   </div>
 </div>
