--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/panel/question-panel/question-panel.component.css
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/panel/question-panel/question-panel.component.css
@@ -1,24 +1,27 @@
 li {
 	cursor: pointer;
 	padding: 10px;
-  }
-  
-  .scrollable-list {
+	font-family: sans-serif;
+}
+ul {
+	padding-inline-start: 0px;
+}
+
+.scrollable-list {
 	height: 300px; /* Set the maximum height to your desired value */
 	overflow-y: auto; /* Enable vertical scrolling when the list exceeds the maximum height */
-    list-style: none; 
-	 
+	list-style: none;
 }
-  
+
 .scrollable-list li {
 	position: relative;
 	padding-left: 30px; /* Add padding to the left to make space for the tick box */
 	cursor: pointer;
 	border-bottom: 1px solid #ccc;
-  }
-  
-  .scrollable-list li::before {
-	content: "";
+}
+
+.scrollable-list li::before {
+	content: '';
 	position: absolute;
 	top: 50%;
 	left: 0;
@@ -28,36 +31,51 @@ li {
 	border: 1px solid #ccc;
 	background-color: #fff;
 	pointer-events: none; /* Prevent the pseudo-element from capturing mouse events */
-  }
-  .scrollable-list li.selected::before {
+}
+.scrollable-list li.selected::before {
 	background-color: #3f51b5; /* Change the background color to indicate selection */
 	border-color: #3f51b5; /* Change the border color to match the background color */
-	content: "\2713"; /* Add a checkmark character (✓) as content */
+	content: '\2713'; /* Add a checkmark character (✓) as content */
 	color: #fff; /* Change the color of the checkmark */
 	text-align: center;
 	line-height: 10px;
 	font-size: 16px;
-  }
+}
 
-  /* /// */
-.panel-container{
+/* /// */
+
+.panel-container {
 	border-radius: 10px;
 	padding: 10px;
 	background-color: lightyellow;
 	/* background-color: rgb(255, 224, 226); */
 }
 
-.panel-header-container{
+.fpanel-header-container {
 	padding: 10px;
 	display: flex;
-  	align-items: center;
+	align-items: center;
+	background-color: #fbf99e;
 }
 
-.panel-title{
+.panel-header-container {
+	padding: 10px;
+	display: flex;
+	align-items: center;
+}
+
+.panel-title {
 	font-size: 30px;
 	padding: 5px;
-	
-  }
+}
+.fquestion-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	overflow-y: auto;
+	overflow-x: hidden;
+	padding-top: 10px;
+}
 
 .question-container {
 	display: block !important;
@@ -66,112 +84,129 @@ li {
 	padding-top: 10px;
 }
 
-
 .question-detail {
-	width: 95%;
-	display: inline-block;
-
+	/* width: 95%; */
+	flex-direction: column;
+	display: flex;
+	align-items: center;
+	height: 100%;
 }
 
-.icdc{
-	border-radius: 10px;
+.icdc {
+	border-radius: 8px;
 	padding: 10px;
-	margin: 10px;
-	width: 65%;
+	margin: 5px;
+	width: 85%;
 	align-content: center;
-	background-color: lightblue;
+	background-color: #fbf99e;
 }
 
-.question-block{
+.question-block {
 	width: 300px;
-	padding-right: 20px;
+	font-family: sans-serif;
+	/* padding-right: 20px; */
 }
 
 ::ng-deep a:-webkit-any-link {
 	color: #1a73e8;
 }
 
-
 /* Apply some basic styling to the form */
 form {
-	width: 400px;
+	width: 300px;
+	height: 100%;
 	margin: 0 auto;
-  }
-  
-  /* Style the labels */
-  label {
+}
+
+/* Style the labels */
+label {
 	display: block;
-	font-weight:500;
+	
 	margin-bottom: 5px;
-	color:black;
-  }
-  
-  /* Style the radio buttons */
-  input[type="radio"],
-  input[type="checkbox"] {
+	color: black;
+	font-family: sans-serif;
+	font-style: normal;
+}
+
+/* Style the radio buttons */
+input[type='radio'],
+input[type='checkbox'] {
 	margin-right: 5px;
-  }
-  
-  /* Style the dropdown/select */
-  select {
-	width: 90%;
+	font-family: sans-serif;
+	font-style: normal;
+}
+
+/* Style the dropdown/select */
+select {
+	width: 98%;
+	margin-right: 5%;
 	padding: 5px;
 	border: 1px solid #ccc;
 	border-radius: 3px;
 	background-color: #f9f9f9;
 	margin-bottom: 10px;
-	box-sizing: border-box; /* Include padding and border in the width calculation */
-  }
-  
-  /* Style the text input */
-  input[type="text"] {
-	width: 90%;
+	/* box-sizing: border-box;  */
+	/* Include padding and border in the width calculation */
+}
+
+/* Style the text input */
+input[type='text'] {
+	width: 98%;
+	margin-right: 5%;
 	padding: 5px;
-	color: #1a73e8;
+	color: #000000;
 	height: 20%;
 	border: 1px solid #ccc;
 	border-radius: 3px;
 	margin-bottom: 10px;
-	box-sizing: border-box; /* Include padding and border in the width calculation */
-  }
-  
-  /* Style the submit button */
-  button[type="submit"] {
-	background-color: #2196F3;
+	/* box-sizing: border-box;  */
+	/* Include padding and border in the width calculation */
+}
+.two-button
+{
+	background-color: #2196f3;
 	color: white;
 	padding: 10px 20px;
+	margin-top: 10px;
 	border: none;
 	border-radius: 3px;
 	cursor: pointer;
-  }
-  
-  /* Add some spacing between elements */
-  br {
+}
+.two-button:disabled {
+	background-color: #cccccc; /* Lighter color for disabled state */
+	color: #999999; /* Lighter text color for disabled state */
+	cursor: not-allowed; /* Show a "not-allowed" cursor for disabled state */
+}
+
+/* Style the submit button */
+button[type='submit'] {
+	background-color: #2196f3;
+	color: white;
+	padding: 10px 20px;
+	margin-top: 10px;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
+}
+
+/* Add some spacing between elements */
+br {
 	margin-top: 10px;
 	margin-bottom: 10px;
-  }
+}
 
-
-  label.question{
+label.question {
 	font-size: medium;
-  }
+}
 
-  ::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-ripple .mat-ripple-element {
-    opacity: 0.03 !important;
-    background-color: #2196F3 !important;
-  }
-  
-::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background,.mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
-    background-color: #2196F3;
-  }
+::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-ripple .mat-ripple-element {
+	opacity: 0.03 !important;
+	background-color: #2196f3 !important;
+}
 
-  .submit-button{
-	padding-left: 100px;
-  }
+::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background,
+.mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
+	background-color: #2196f3;
+}
 
-  
 
-  
-  
-
- 
