--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/panel/question-panel/question-panel.component.css
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/panel/question-panel/question-panel.component.css
@@ -7,6 +7,7 @@ ul {
 	padding-inline-start: 0px;
 }
 
+
 .scrollable-list {
 	height: 300px; /* Set the maximum height to your desired value */
 	overflow-y: auto; /* Enable vertical scrolling when the list exceeds the maximum height */
@@ -19,6 +20,7 @@ ul {
 	cursor: pointer;
 	border-bottom: 1px solid #ccc;
 }
+
 
 .scrollable-list li::before {
 	content: '';
@@ -187,6 +189,12 @@ button[type='submit'] {
 	border: none;
 	border-radius: 3px;
 	cursor: pointer;
+}
+button[type='submit']:disabled
+{
+	background-color: #cccccc; /* Lighter color for disabled state */
+	color: #999999; /* Lighter text color for disabled state */
+	cursor: not-allowed; /* Show a "not-allowed" cursor for disabled state */
 }
 
 /* Add some spacing between elements */
