--- a/mcarbonPortal/src/app/components/sidebar/sidebar.component.css
+++ b/mcarbonPortal/src/app/components/sidebar/sidebar.component.css
@@ -1,17 +1,25 @@
-/* .logo::after{
-    height: 0px !important;
+.logo::after {
+  height: 0px !important;
 }
 
-.logo{
-    margin-bottom:30px !important
-} */
+.logo {
+  margin-bottom: 30px !important;
+}
 .logo-image {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56),
+    0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
 }
 
 .img-photo {
   width: inherit;
+  height: inherit;
+  border-radius: inherit;
+}
+
+.img-div {
+  display: flex;
+  justify-content: center;
 }
