--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/stream/stream.component.html
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/stream/stream.component.html
@@ -8,7 +8,12 @@
 	<div *ngIf="!isMinimal && showNickname" id="nickname-container" class="nickname" [class.fullscreen]="isFullscreen">
 		<div (click)="toggleNicknameForm()" class="nicknameContainer" selected *ngIf="!toggleNickname">
 			<span id="nickname" *ngIf="this._stream.type === 'CAMERA'">{{ this._stream.participant.nickname }}</span>
-			<span id="nickname" *ngIf="this._stream.type === 'SCREEN'">{{ this._stream.participant.nickname }}</span>
+			<span id="nickname" *ngIf="this._stream.type === 'SCREEN' && this._stream.participant.isLocal()"
+				>{{ this._stream.participant.nickname }}_SCREEN</span
+			>
+			<span id="nickname" *ngIf="this._stream.type === 'SCREEN' && !this._stream.participant.isLocal()">{{
+				this._stream.participant.nickname
+			}}</span>
 			<span id="nickname" *ngIf="this._stream.type !== 'CAMERA' && this._stream.type !== 'SCREEN'">{{
 				this._stream.participant.nickname
 			}}</span>
